--- a/core/Makefile
+++ b/core/Makefile
@@ -4315,6 +4315,7 @@ INTERNAL_OTATOOLS_MODULES := \
   e2fsdroid \
   fc_sort \
   fec \
+  fsck.erofs \
   fsck.f2fs \
   fs_config \
   generate_verity_key \
